# Prompt_Regression_Suite_Report

./: .env.example  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: pr-regression.yml  weekly-drift.yml
ci/: detect_affected.py  post_comment.py  run_suite.py
dashboard/: app.py
prompts/: code_reviewer.txt  customer_support.txt  financial_analyst.txt
src/: change_detector.py  config.py  registry.py  runner.py
src/api/: app.py
src/api/routers/: baselines.py  runs.py  test_cases.py
src/assertions/: __init__.py  base.py  engine.py  judge.py  rule_based.py  semantic.py
src/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py  openai_client.py
src/models/: __init__.py  result.py  test_case.py
src/storage/: __init__.py  baseline_manager.py  database.py  orm_models.py
tests/code/: format_check.prompt-test.yaml
tests/financial/: qa_citation.prompt-test.yaml
tests/support/: tone_check.prompt-test.yaml
